# ollama-cli-rs

./: .gitignore  Cargo.toml  MIGRATE.md  README.md
.github/workflows/: release.yml
aur/: PKGBUILD
src/: cli.rs  client.rs  config.rs  format.rs  main.rs  stream.rs
src/api/: types.rs
src/commands/: benchmark.rs  chat.rs  config_cmd.rs  copy.rs  create.rs  embed.rs  generate.rs  library.rs  list.rs  mod.rs  ps.rs  pull.rs  push.rs  remove.rs  show.rs  unload.rs
src/tui/: action.rs  app.rs  event.rs  keymap.rs  markdown.rs  mod.rs  theme.rs  ui.rs
src/tui/views/: benchmark.rs  chat.rs  config.rs  library.rs  mod.rs  models.rs  running.rs
src/tui/widgets/: confirm_dialog.rs  help_overlay.rs  input_box.rs  library_detail.rs  message_list.rs  mod.rs  model_detail.rs  model_picker.rs  pull_progress.rs  sidebar.rs  status_bar.rs  text_input.rs  toast.rs
