[package]
name = "ollama-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing remote Ollama instances"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.17"
comfy-table = "7"
inquire = "0.7"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
directories = "5"
scraper = "0.22"
csv = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
bytes = "1"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
pulldown-cmark = "0.12"
unicode-width = "0.2"
